--- a/Packages/com.spark.codebrowser/package.json
+++ b/Packages/com.spark.codebrowser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.spark.codebrowser",
-  "displayName": "[SPARK] Code Browser",
+  "displayName": "[Tool] Code Browser",
   "version": "0.0.1",
   "author": {
     "name": "Erik Larsson",
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "com.unity.nuget.mono-cecil": "1.10.2",
-    "com.unity.editorcoroutines": "1.0.0"
+    "com.unity.editorcoroutines": "1.0.0",
+    "com.spark.thirdparty.roslyn": "1.0.0"
   },
   "description": "Code Browser Tool",
   "type": "tool"
